<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.adityacomputers.loginapptest.MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:id="@+id/etUname"
        android:hint="username" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/etUname"
        android:layout_alignLeft="@+id/etUname"
        android:layout_alignStart="@+id/etUname"
        android:layout_marginTop="27dp"
        android:id="@+id/etpassword" />

    <Button
        android:text="Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etpassword"
        android:layout_alignLeft="@+id/etpassword"
        android:layout_alignStart="@+id/etpassword"
        android:layout_marginLeft="107dp"
        android:layout_marginStart="107dp"
        android:layout_marginTop="57dp"
        android:id="@+id/btnlogin"
        android:onClick="loginButtonClicked" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnlogin"
        android:layout_alignLeft="@+id/etpassword"
        android:layout_alignStart="@+id/etpassword"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:id="@+id/textView" />
</RelativeLayout>
